<resources>
    <string name="app_name">PhotoThis</string>
    <string name="diary_image_description">Diary Image</string>
    <string name="menu_button_desc">Menu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- + 버튼에 대한 접근성 설명 -->
    <string name="add_button_description">새 항목 추가</string>
    <!-- 날짜 포맷을 위한 문자열 리소스 -->
    <string name="date_pattern">yyyy년 MM월 dd일</string>
    <string name="close_popup">Close</string>
    <string name="task_hint">할 일 입력</string>
    <string name="set_time">시간 설정</string>
    <string name="no_time_set">시간 설정 안 함</string>
    <string name="register">등록</string>
    <string name="delete">삭제</string>
    <string name="add_task">추가하기</string>

<!--    로그인-->
    <string name="naver_client_id">xkBgoDz4dR1NEGQFeaEk</string> <!-- 실제 클라이언트 ID -->
    <string name="naver_client_secret"> PPJfEEMcxI</string>  <!-- 실제 클라이언트 Secret -->
</resources>
