<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Close Button -->
    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/close_popup"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_gravity="end"/>

    <!-- Task Input -->
    <EditText
        android:id="@+id/taskInput"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_hint"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        style="@style/EditTextStyle"/>

    <!-- Radio Group for Time Setting -->
    <RadioGroup
        android:id="@+id/radioGroupTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radioButtonAnytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_time_set"
            android:textColor="?attr/colorPrimary"/>

        <RadioButton
            android:id="@+id/radioButtonSpecificTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textColor="?attr/colorPrimary" />
    </RadioGroup>

    <!-- TimePicker -->
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:theme="@style/TimePickerTheme"/>

</LinearLayout>